--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh; /* Full viewport height */
-    background: linear-gradient(135deg, #00aaff, #0044ff); /* Gradient background */
+    background: linear-gradient(135deg, #D3D3D3, #0044ff); /* Gradient background */
     color: #fff;
     text-align: center;
     padding: 20px;
@@ -21,7 +21,7 @@
   }
   
   .intro-section h1 {
-    font-size: 2.5em; /* Adjusted for better responsiveness */
+    font-size: 2.7em; /* Adjusted for better responsiveness */
     margin-bottom: 20px;
     font-weight: bold;
   }
