--- a/src/components/typewriter/typewriter.css
+++ b/src/components/typewriter/typewriter.css
@@ -1,17 +1,41 @@
 /* src/components/Typewriter.css */
 .typewriter-text {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 1.2em;
-    color: #333;
-    border-right: 2px solid #333; /* Cursor effect */
-    white-space: nowrap;
-    overflow: hidden;
-    display: inline-block;
-    animation: blink-caret .75s step-end infinite;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1.2em;
+  color: #333;
+  border-right: 2px solid #333; /* Cursor effect */
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
+  animation: blink-caret .75s step-end infinite;
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: #333 }
+}
+
+/* Responsive adjustments */
+@media (max-width: 1200px) {
+  .typewriter-text {
+      font-size: 10px /* Slightly smaller font for larger tablets */
   }
-  
-  @keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: #333 }
+}
+
+@media (max-width: 992px) {
+  .typewriter-text {
+      font-size: .5em; /* Slightly smaller font for smaller tablets */
   }
-  
+}
+
+@media (max-width: 768px) {
+  .typewriter-text {
+      font-size: 10px; /* Smaller font for mobile devices */
+  }
+}
+
+@media (max-width: 480px) {
+  .typewriter-text {
+      font-size: 10px; /* Smaller font for very small mobile devices */
+  }
+}
